@@ -19,27 +19,28 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: setup apt dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install xvfb qt5-default opencl-headers ocl-icd-opencl-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install numpy scipy h5py cython pandas xlrd flake8 pytest ipywidgets IPython matplotlib traitlets pyqt5
-        pip install uncertainties ptemcee corner tqdm pytest-qt periodictable
+        python -m pip install wheel
+        python -m pip install numpy scipy h5py cython pandas xlrd flake8 pytest ipywidgets IPython matplotlib traitlets pyqt5
+        python -m pip install uncertainties ptemcee corner tqdm pytest-qt periodictable pyopencl
         pip install git+https://github.com/pymc-devs/pymc3
-        pip install .
     - name: Lint with flake8
       run: |
         pip install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 --ignore=F401,W504 --count --show-source --statistics --exclude=refnx/_lib/emcee,refnx/reflect/_app/resources_rc.py refnx
-    - name: setup xvfb
-      run: |
-        sudo apt-get update
-        sudo apt-get install xvfb qt5-default
     - name: Test with pytest
       env:
         MPLBACKEND: agg
       run: |
-        pip install pytest
+        python -m pip install .
+        python -m pip install pytest
         # uses xvfb for GUI part of the test
         xvfb-run pytest
 
@@ -84,7 +85,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install numpy scipy h5py cython pandas xlrd pytest ipywidgets IPython matplotlib traitlets pyqt5
-        pip install uncertainties ptemcee corner tqdm pytest-qt periodictable wheel delocate
+        pip install uncertainties ptemcee corner tqdm pytest-qt periodictable wheel delocate pyopencl
         pip install git+https://github.com/pymc-devs/pymc3
 
     - name: Make wheel
